[package]
name = "stellar_binary_search"
description = "A preprocessor for a search algorithm for identifying constallations"
version = "0.1.0"
edition = "2021"
authors = ["Emily O'Donovan"]
readME = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestore = "0.32.0"
serde = {version = "1.0.160", features = ["derive"]}
tokio = {version = "1.12.0", features = ["full"]}
gcloud-sdk = {version = "0.20.1", features = ["google-firestore-v1"]}

[[bin]]
name = "stellar_binary_search"
path = "src/main.rs"

[profile.dev]
opt-level = 0
